@@ -188,6 +188,18 @@ Works like |input| command in data files---includes other files.
 \endsyntax
 
 
+\subsubchapter `log'.
+
+\description
+  Turn on logging of various info. Currently only extended elevation
+  processing log is supported.
+\enddescription
+
+\syntax
+  |log extend|
+\endsyntax
+
+
 \subsubchapter `text'.
 
 \description
